# demo-authz

./: .coveragerc  .gitignore  .gitpod.Dockerfile  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  config.py  docker-compose.yml  gitpod.yml  pyproject.toml  requirements-dev.txt  requirements.txt
hooks/: write_requirements.sh
src/: __init__.py  main.py
src/database/: __init__.py  crud.py  models.py  schemas.py
src/database/config/: config_tables.json  credentials.py  mapper.py
src/database/entity/: config_tables.json  entities.py
src/database/functions/default/: __init__.py  crud.py
src/database/functions/list/: list.py
src/database/models/: List.py  Relationship.py  Task.py  TypeTask.py
src/database/schemas/: List.py  Relationship.py  Task.py  TypeTask.py
src/routes/: action.py  functionality.py  group.py  health.py  policy.py  relationship.py  user.py  version.py
src/security/: __init__.py
src/tools/: __init__.py  log_utils.py
tests/: __init__.py  conftest.py
tests/db/: config_tables.json  test.db
tests/list/: test_list.py
tests/user/: test_user_route.py
